# NovelParser

./: README.md  package.json
.agent/workflows/: dev-guide.md
docs/: quick-outline-mode.md
src-tauri/: Cargo.toml  check_errors.txt  tauri.conf.json
src-tauri/src/: analysis.rs  export.rs  lib.rs  llm.rs  models.rs  outline.rs  prompt.rs  storage.rs  token_utils.rs
src-tauri/src/commands/: analysis.rs  batch.rs  chapter.rs  export.rs  mod.rs  novel.rs  outline.rs  settings.rs  summary.rs
src/components/: BatchTimeStats.tsx  BookOutlineView.tsx  ChapterOutlineView.tsx  DimensionSelector.tsx  FullBookManualPromptPanel.tsx  FullBookSummaryView.tsx  LlmConfigModal.tsx  ManualPromptPanel.tsx  StreamingJsonViewer.tsx  VirtualList.tsx
src/components/layout/: AppLayout.tsx
src/pages/: HomePage.tsx  NovelPage.tsx  SummaryPage.tsx
src/store/: index.ts  novelStore.ts  types.ts
src/store/slices/: analysisSlice.ts  chapterSlice.ts  eventSlice.ts  novelSlice.ts  outlineSlice.ts  settingsSlice.ts  summarySlice.ts
src/types/: index.ts
