[package]
name = "novelparser"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "novelparser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-openai = "0.27"
tokio = { version = "1", features = ["full"] }
epub = "2"
html2text = "0.14"
rusqlite = { version = "0.33", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
regex = "1"
reqwest = { version = "0.12.28", features = ["json"] }
futures = "0.3.32"
tiktoken-rs = "0.9.1"

[dev-dependencies]
tempfile = "3.26.0"
